styles/style.css
html {
	font-family: 'Zilla Slab', serif;
	font-size: 10px;
}

body {
	background-color: #E9EBEE;
	margin: 0;
}

nav {
	display: flex;
	flex-wrap: wrap;
}

nav a {
	flex: auto;
	text-align: center;
	padding: 10px;
	font-size: 3rem;
	background: #08090d;
	text-decoration: none;
	color: #f6e9cf;
}

nav a:hover {
	background: white;
	color: #292d34;
}

header {
	background-image: url(../images/lamps.jpg);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	height: 35rem;
}

header h1 {
	text-align: center;
	font-size: 4.5rem;
	color: #f6e9cf;
	margin: 0;
	padding-top: 15rem;
}

main {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
	grid-template-rows: auto;
	grid-gap: 0.5rem;
	margin-top: 2rem;
}

article {
	grid-column: span 12;
	margin: 2rem;
	background: white;
}

article h1 {
	font-size: 2.5rem;
	margin: 0;
}

article p, dt, dd {
	font-size: 2rem;
}

.article-picture {
	background-color: #08090d;
	color: #f6e9cf;
	margin: 0;
	padding: 2rem;
	height: 15rem;
}

.article-picture h1 {
	font-size: 4rem;
	text-align: center;
	padding: 4rem;
}

.article-content {
	padding: 0 2rem 2rem 2rem;
}

.article-content img {
	max-width: 40rem;
	margin: 0 2rem;
	padding-left: 8rem;
}

.article-content blockquote {
	font-size: 2rem;
}

.article-content code {
	background: #E9EBEE
}

.contact-me {
	grid-column: span 12;
	font-size: 2rem;
	text-align: center;
	padding: 2rem;
	text-decoration: none;
	color: black;
}

.contact-me a {
	flex: auto;
	text-align: center;
	font-size: 3rem;
	background: #08090d;
	text-decoration: none;
	color: black;
}

.contact-me a:hover {
	color: purple;
}

footer {
	grid-column: span 12;
	font-size: 2rem;
	text-align: center;
	padding: 2rem;
	background-color: #08090d;
	color: #f6e9cf;
}

@media (max-width: 1000px) and (min-width: 400px) {
	nav a {
		font-size: 50px;
	}
	header h1 {
		font-size: 75px;
	}
	article {
		grid-column: span 12;
	}
	.article-picture h1 {
		font-size: 50px;
	}
	.contact-me {
		font-size: 35px;
	}
	.contact-me h1 {
		font-size: 50px;
	}
	.contact-me a {
		font-size: 50px;
	}
	footer {
		font-size: 30px;
	}
}

